--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,31 @@
             <version>7.0.0-beta1</version>
         </dependency>
     </dependencies>
-
+<build>
+    <plugins>
+        <plugin>
+            <groupId>com.github.webdriverextensions</groupId>
+            <artifactId>webdriverextensions-maven-plugin</artifactId>
+            <version>3.1.3</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>install-drivers</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <installationDirectory>./src/main/resources/drivers</installationDirectory>
+                <drivers>
+                    <driver>
+                        <name>chromedriver</name>
+                        <platform>windows</platform>
+                        <bit>32</bit>
+                        <version>2.43</version>
+                    </driver>
+                </drivers>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
